# BFInterpreter

./: .gitignore  CMakeLists.txt
src/: BFInterpreter.c  BFInterpreter.h  main.c
